# Snake_AI

./: .gitignore  CMakeLists.txt  README.md
src/error/: CMakeLists.txt  error.c
src/error/include/: error.h
src/include/: pch.h
src/snake/: CMakeLists.txt  game.c
src/snake/include/: game.h
test/: CMakeLists.txt
test/snake/: board.c  failure.c  food.c  movement.c  snake.cmake
test/snake/assets/: boardtest.sn_game  default.sn_game  food1.sn_game  food2.sn_game
test/snake/assets/move/: basic_down.sn_game  basic_left.sn_game  basic_right.sn_game  basic_up.sn_game  list1_1.sn_game  list1_2.sn_game  list2.sn_game
test/util/: snakeutil.c  util.cmake
test/util/include/: util.h
